fix: changed the sidebar scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,6 @@ html {
 }
 
 .custom-scrollbar-sidebar::-webkit-scrollbar-thumb {
-  background-color: #54de5d;
+  background-color: #10b981;
   border-radius: 30px;
 }
